# Peach

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
.github/workflows/: main.yml
src/: App.svelte  app.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: discover.rs  icon_cache.rs  main.rs
src/components/: Application.svelte  Applications.svelte  ContextMenu.svelte  Drive.svelte  FileBrowser.svelte  FileListing.svelte  Home.svelte  MainView.svelte  MiniSearchBar.svelte  Sidebar.svelte  Sync.svelte  Tab.svelte  Tabs.svelte
src/lib/: ListDir.svelte  files.ts  global.ts  index.ts  mounted_drive.ts  os_path.ts  stores.ts  tab.ts
src/lib/assets/: AppIcon.icns
src/routes/: +page.svelte
