[package]
name = "Peach"
version = "0.1.0"
description = "Browse, in pink."
authors = ["grojdg"]
license = ""
repository = ""
default-run = "Peach"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png", "devtools" ] }
window-shadows = "0.2.2"
open = "5.0.1"
sysinfo = "0.30.7"
tauri-icns = "0.1.0"
mdns-sd = "0.11.0"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-notification = "2.0.0-beta.5"
tauri-plugin-clipboard-manager = "2.1.0-beta.2"
tauri-plugin-http = "2.0.0-beta.7"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.4"
